[tool.poetry]
name = "generalization"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
attrs = ">=19.1.0"
GitPython = "^3.1.27"
imageio = "^2.16.1"
imageio-ffmpeg = "^0.4.5"
matplotlib = "^3.5.1"
numba = "^0.55.1"
Pillow = "^9.0.1"
scipy = ">=1.3.0"
tqdm = "^4.63.0"
numpy-quaternion = "^2022.2.10"
habitat = {git = "https://github.com/GPT-RL/habitat-lab.git", rev = "fbdd9fd42e7716c04bbde1da0d867e6d79dd3490"}

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^8.1.1"
black = "^22.1.0"
openai = "^0.15.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
